--- a/templates/compactor-svc.yaml
+++ b/templates/compactor-svc.yaml
@@ -1,29 +1,28 @@
+{{- if eq .Values.config.storage.engine "blocks" -}}
 apiVersion: v1
 kind: Service
 metadata:
-  name: {{ template "cortex.fullname" . }}-query-frontend
+  name: {{ template "cortex.fullname" . }}-compactor-headless
   namespace: {{ .Release.Namespace }}
   labels:
-    app: {{ template "cortex.name" . }}-query-frontend
+    app: {{ template "cortex.name" . }}-compactor
     chart: {{ template "cortex.chart" . }}
     release: {{ .Release.Name }}
     heritage: {{ .Release.Service }}
-    {{- with .Values.query_frontend.service.labels }}
+    {{- with .Values.compactor.service.labels }}
     {{- toYaml . | nindent 4 }}
-    {{- end }}
+  {{- end }}
   annotations:
-    {{- toYaml .Values.query_frontend.service.annotations | nindent 4 }}
+  {{- toYaml .Values.compactor.service.annotations | nindent 4 }}
 spec:
   type: ClusterIP
+  clusterIP: None
   ports:
     - port: {{ .Values.config.server.http_listen_port }}
       protocol: TCP
       name: http-metrics
       targetPort: http-metrics
-    - port: {{ .Values.config.server.grpc_listen_port }}
-      protocol: TCP
-      name: grpclb
-      targetPort: grpc
   selector:
-    app: {{ template "cortex.name" . }}-query-frontend
+    app: {{ template "cortex.name" . }}-compactor
     release: {{ .Release.Name }}
+  {{- end -}}
