--- a/templates/distributor-svc.yaml
+++ b/templates/distributor-svc.yaml
@@ -8,11 +8,11 @@ metadata:
     chart: {{ template "cortex.chart" . }}
     release: {{ .Release.Name }}
     heritage: {{ .Release.Service }}
-    {{- with .Values.distributor.labels }}
+    {{- with .Values.distributor.service.labels }}
     {{- toYaml . | nindent 4 }}
     {{- end }}
   annotations:
-    {{- toYaml .Values.distributor.annotations | nindent 4 }}
+    {{- toYaml .Values.distributor.service.annotations | nindent 4 }}
 spec:
   type: ClusterIP
   ports:
