--- a/templates/nginx-svc.yaml
+++ b/templates/nginx-svc.yaml
@@ -9,13 +9,13 @@ metadata:
     chart: {{ template "cortex.chart" . }}
     release: {{ .Release.Name }}
     heritage: {{ .Release.Service }}
-    {{- with .Values.nginx.labels }}
+    {{- with .Values.nginx.service.labels }}
     {{- toYaml . | nindent 4 }}
     {{- end }}
   annotations:
-    {{- toYaml .Values.nginx.annotations | nindent 4 }}
+    {{- toYaml .Values.nginx.service.annotations | nindent 4 }}
 spec:
-  type: ClusterIP
+  type: {{ .Values.nginx.service.type }}
   ports:
     - port: {{ .Values.nginx.http_listen_port }}
       protocol: TCP
