--- a/templates/store-gateway-svc.yaml
+++ b/templates/store-gateway-svc.yaml
@@ -9,11 +9,11 @@ metadata:
     chart: {{ template "cortex.chart" . }}
     release: {{ .Release.Name }}
     heritage: {{ .Release.Service }}
-    {{- with .Values.store_gateway.labels }}
+    {{- with .Values.store_gateway.service.labels }}
     {{- toYaml . | nindent 4 }}
     {{- end }}
   annotations:
-    {{- toYaml .Values.store_gateway.annotations | nindent 4 }}
+    {{- toYaml .Values.store_gateway.service.annotations | nindent 4 }}
 spec:
   type: ClusterIP
   clusterIP: None
