--- a/templates/table-manager-svc.yaml
+++ b/templates/table-manager-svc.yaml
@@ -9,11 +9,11 @@ metadata:
     chart: {{ template "cortex.chart" . }}
     release: {{ .Release.Name }}
     heritage: {{ .Release.Service }}
-    {{- with .Values.table_manager.labels }}
+    {{- with .Values.table_manager.service.labels }}
     {{- toYaml . | nindent 4 }}
     {{- end }}
   annotations:
-    {{- toYaml .Values.table_manager.annotations | nindent 4 }}
+    {{- toYaml .Values.table_manager.service.annotations | nindent 4 }}
 spec:
   type: ClusterIP
   ports:
