--- a/Chart.yaml
+++ b/Chart.yaml
@@ -16,15 +16,15 @@ dependencies:
   - name: memcached
     alias: memcached
     version: 3.2.3
-    repository: https://kubernetes-charts.storage.googleapis.com/
+    repository: https://charts.helm.sh/stable
     condition: memcached.enabled
   - name: memcached
     alias: memcached-index-read
     version: 3.2.3
-    repository: https://kubernetes-charts.storage.googleapis.com/
+    repository: https://charts.helm.sh/stable
     condition: memcached-index-read.enabled
   - name: memcached
     alias: memcached-index-write
     version: 3.2.3
-    repository: https://kubernetes-charts.storage.googleapis.com/
+    repository: https://charts.helm.sh/stable
     condition: memcached-index-write.enabled
