--- a/templates/alertmanager/alertmanager-servicemonitor.yaml
+++ b/templates/alertmanager/alertmanager-servicemonitor.yaml
@@ -2,24 +2,18 @@
 apiVersion: monitoring.coreos.com/v1
 kind: ServiceMonitor
 metadata:
-  name: {{ template "cortex.fullname" . }}-alertmanager
-  labels:
-    app: {{ template "cortex.name" . }}
-    chart: {{ template "cortex.chart" . }}
-    heritage: {{ .Release.Service }}
-    release: {{ .Release.Name }}
-    {{- if .Values.alertmanager.serviceMonitor.additionalLabels }}
+  name: {{ template "cortex-alertmanager.fullname" . }}
+  labels: {{ include "cortex-alertmanager.labels" . | nindent 4 }}
+{{- if .Values.alertmanager.serviceMonitor.additionalLabels }}
 {{ toYaml .Values.alertmanager.serviceMonitor.additionalLabels | indent 4 }}
-    {{- end }}
+{{- end }}
   {{- if .Values.alertmanager.serviceMonitor.annotations }}
   annotations:
 {{ toYaml .Values.alertmanager.serviceMonitor.annotations | indent 4 }}
   {{- end }}
 spec:
   selector:
-    matchLabels:
-      app: {{ template "cortex.name" . }}-alertmanager
-      release: {{ .Release.Name | quote }}
+    matchLabels: {{ include "cortex-alertmanager.matchLabels" . | nindent 6 }}
   namespaceSelector:
     matchNames:
       - {{ .Release.Namespace | quote }}
