--- a/templates/compactor/compactor-servicemonitor.yaml
+++ b/templates/compactor/compactor-servicemonitor.yaml
@@ -1,13 +1,9 @@
-{{- if .Values.compactor.serviceMonitor.enabled }}
+{{- if and .Values.compactor.enabled .Values.compactor.serviceMonitor.enabled (eq .Values.config.storage.engine "blocks") -}}
 apiVersion: monitoring.coreos.com/v1
 kind: ServiceMonitor
 metadata:
-  name: {{ template "cortex.fullname" . }}-compactor
-  labels:
-    app: {{ template "cortex.name" . }}
-    chart: {{ template "cortex.chart" . }}
-    heritage: {{ .Release.Service }}
-    release: {{ .Release.Name }}
+  name: {{ template "cortex-compactor.fullname" . }}
+  labels: {{ include "cortex-compactor.labels" . | nindent 4 }}
     {{- if .Values.compactor.serviceMonitor.additionalLabels }}
 {{ toYaml .Values.compactor.serviceMonitor.additionalLabels | indent 4 }}
     {{- end }}
@@ -17,9 +13,7 @@ metadata:
   {{- end }}
 spec:
   selector:
-    matchLabels:
-      app: {{ template "cortex.name" . }}-compactor
-      release: {{ .Release.Name | quote }}
+    matchLabels: {{ include "cortex-compactor.matchLabels" . | nindent 6 }}
   namespaceSelector:
     matchNames:
       - {{ .Release.Namespace | quote }}
