--- a/templates/secret-postgresql.yaml
+++ b/templates/secret-postgresql.yaml
@@ -4,11 +4,7 @@ kind: Secret
 metadata:
   name: {{ template "cortex.fullname" . }}-postgresql
   namespace: {{ .Release.Namespace }}
-  labels:
-    app: {{ template "cortex.name" . }}
-    chart: {{ template "cortex.chart" . }}
-    release: {{ .Release.Name }}
-    heritage: {{ .Release.Service }}
+  labels: {{ include "cortex.labels" . | nindent 4 }}
 data:
   postgresql-password: {{ .Values.configsdb_postgresql.auth.password | b64enc}}
 {{- end }}
