--- a/templates/alertmanager/alertmanager-svc-headless.yaml
+++ b/templates/alertmanager/alertmanager-svc-headless.yaml
@@ -1,16 +1,12 @@
+{{- if .Values.alertmanager.statefulSet.enabled -}}
 {{- $clusterPort := regexReplaceAll ".+[:]" (default "0.0.0.0:9094" .Values.config.alertmanager.cluster_bind_address) "" -}}
 apiVersion: v1
 kind: Service
 metadata:
-  name: {{ template "cortex.fullname" . }}-alertmanager-headless
-  namespace: {{ .Release.Namespace }}
-  labels:
-    app: {{ template "cortex.name" . }}-alertmanager
-    chart: {{ template "cortex.chart" . }}
-    release: {{ .Release.Name }}
-    heritage: {{ .Release.Service }}
+  name: {{ template "cortex-alertmanager.headlessname" . }}
+  labels: {{ include "cortex-alertmanager.labels" . | nindent 4 }}
     {{- with .Values.alertmanager.service.labels }}
-    {{- toYaml . | nindent 4 }}
+{{- toYaml . | indent 4 }}
     {{- end }}
   annotations:
     {{- toYaml .Values.alertmanager.service.annotations | nindent 4 }}
@@ -25,6 +21,5 @@ spec:
     - port: {{ $clusterPort }}
       protocol: TCP
       name: cluster
-  selector:
-    app: {{ template "cortex.name" . }}-alertmanager
-    release: {{ .Release.Name }}
+  selector: {{ include "cortex-alertmanager.matchLabels" . | nindent 4 }}
+{{- end }}
