--- a/templates/distributor/distributor-svc.yaml
+++ b/templates/distributor/distributor-svc.yaml
@@ -1,15 +1,10 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: {{ template "cortex.fullname" . }}-distributor
-  namespace: {{ .Release.Namespace }}
-  labels:
-    app: {{ template "cortex.name" . }}-distributor
-    chart: {{ template "cortex.chart" . }}
-    release: {{ .Release.Name }}
-    heritage: {{ .Release.Service }}
+  name: {{ template "cortex-distributor.fullname" . }}
+  labels: {{ include "cortex-distributor.labels" . | nindent 4 }}
     {{- with .Values.distributor.labels }}
-    {{- toYaml . | nindent 4 }}
+{{- toYaml . | indent 4 }}
     {{- end }}
   annotations:
     {{- toYaml .Values.distributor.annotations | nindent 4 }}
@@ -20,6 +15,4 @@ spec:
       protocol: TCP
       name: http-metrics
       targetPort: http-metrics
-  selector:
-    app: {{ template "cortex.name" . }}-distributor
-    release: {{ .Release.Name }}
+  selector: {{ include "cortex-distributor.matchLabels" . | nindent 4 }}
