--- a/templates/ingester/ingester-dep.yaml
+++ b/templates/ingester/ingester-dep.yaml
@@ -2,33 +2,22 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: {{ template "cortex.fullname" . }}-ingester
-  namespace: {{ .Release.Namespace }}
-  labels:
-    app: {{ template "cortex.name" . }}-ingester
-    chart: {{ template "cortex.chart" . }}
-    release: {{ .Release.Name }}
-    heritage: {{ .Release.Service }}
+  name: {{ template "cortex-ingester.fullname" . }}
+  labels: {{ include "cortex-ingester.labels" . | nindent 4 }}
   annotations:
     {{- toYaml .Values.ingester.annotations | nindent 4 }}
 spec:
   replicas: {{ .Values.ingester.replicas }}
   selector:
-    matchLabels:
-      app: {{ template "cortex.name" . }}-ingester
-      release: {{ .Release.Name }}
+    matchLabels: {{ include "cortex-ingester.matchLabels" . | nindent 6 }}
   strategy:
     {{- toYaml .Values.ingester.strategy | nindent 4 }}
   template:
     metadata:
-      labels:
-        app: {{ template "cortex.name" . }}-ingester
-        name: {{ template "cortex.name" . }}-ingester
-        target: ingester
-        release: {{ .Release.Name }}
-        {{- with .Values.ingester.podLabels }}
-        {{- toYaml . | nindent 8 }}
-        {{- end }}
+      labels: {{ include "cortex-ingester.labels" . | nindent 8 }}
+{{- with .Values.ingester.podLabels }}
+{{- toYaml . | indent 8 }}
+{{- end }}
       annotations:
         {{- if .Values.useExternalConfig }}
         checksum/config: {{ .Values.externalConfigVersion }}
