--- a/templates/nginx/nginx-svc.yaml
+++ b/templates/nginx/nginx-svc.yaml
@@ -2,16 +2,11 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: {{ template "cortex.fullname" . }}
-  namespace: {{ .Release.Namespace }}
-  labels:
-    app: {{ template "cortex.name" . }}-nginx
-    chart: {{ template "cortex.chart" . }}
-    release: {{ .Release.Name }}
-    heritage: {{ .Release.Service }}
-    {{- with .Values.nginx.labels }}
-    {{- toYaml . | nindent 4 }}
-    {{- end }}
+  name: {{ template "cortex-nginx.fullname" . }}
+  labels: {{ include "cortex-nginx.labels" . | nindent 4 }}
+{{- with .Values.nginx.labels }}
+{{- toYaml . | indent 4 }}
+{{- end }}
   annotations:
     {{- toYaml .Values.nginx.annotations | nindent 4 }}
 spec:
@@ -21,7 +16,5 @@ spec:
       protocol: TCP
       name: http-metrics
       targetPort: http-metrics
-  selector:
-    app: {{ template "cortex.name" . }}-nginx
-    release: {{ .Release.Name }}
+  selector: {{ include "cortex-nginx.matchLabels" . | nindent 4 }}
 {{- end }}
