--- a/templates/podsecuritypolicy.yaml
+++ b/templates/podsecuritypolicy.yaml
@@ -4,11 +4,7 @@ kind: PodSecurityPolicy
 metadata:
   name: {{ template "cortex.fullname" . }}
   namespace: {{ .Release.Namespace }}
-  labels:
-    app: {{ template "cortex.name" . }}
-    chart: {{ template "cortex.chart" . }}
-    heritage: {{ .Release.Service }}
-    release: {{ .Release.Name }}
+  labels: {{ include "cortex.labels" . | nindent 4 }}
 spec:
   privileged: false
   allowPrivilegeEscalation: false
