--- a/templates/query-frontend/query-frontend-svc.yaml
+++ b/templates/query-frontend/query-frontend-svc.yaml
@@ -1,16 +1,11 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: {{ template "cortex.fullname" . }}-query-frontend
-  namespace: {{ .Release.Namespace }}
-  labels:
-    app: {{ template "cortex.name" . }}-query-frontend
-    chart: {{ template "cortex.chart" . }}
-    release: {{ .Release.Name }}
-    heritage: {{ .Release.Service }}
-    {{- with .Values.query_frontend.labels }}
-    {{- toYaml . | nindent 4 }}
-    {{- end }}
+  name: {{ template "cortex-query-frontend.fullname" . }}
+  labels: {{ include "cortex-query-frontend.labels" . | nindent 4 }}
+{{- with .Values.query_frontend.labels }}
+{{- toYaml . | indent 4 }}
+{{- end }}
   annotations:
     {{- toYaml .Values.query_frontend.annotations | nindent 4 }}
 spec:
@@ -24,6 +19,4 @@ spec:
       protocol: TCP
       name: grpclb
       targetPort: grpc
-  selector:
-    app: {{ template "cortex.name" . }}-query-frontend
-    release: {{ .Release.Name }}
+  selector: {{ include "cortex-query-frontend.matchLabels" . | nindent 4 }}
