--- a/templates/ruler/ruler-svc.yaml
+++ b/templates/ruler/ruler-svc.yaml
@@ -1,16 +1,11 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: {{ template "cortex.fullname" . }}-ruler
-  namespace: {{ .Release.Namespace }}
-  labels:
-    app: {{ template "cortex.name" . }}-ruler
-    chart: {{ template "cortex.chart" . }}
-    release: {{ .Release.Name }}
-    heritage: {{ .Release.Service }}
-    {{- with .Values.ruler.labels }}
-    {{- toYaml . | nindent 4 }}
-    {{- end }}
+  name: {{ template "cortex-ruler.fullname" . }}
+  labels: {{ include "cortex-ruler.labels" . | nindent 4 }}
+{{- with .Values.ruler.labels }}
+{{- toYaml . | indent 4 }}
+{{- end }}
   annotations:
     {{- toYaml .Values.ruler.annotations | nindent 4 }}
 spec:
@@ -20,6 +15,4 @@ spec:
       protocol: TCP
       name: http-metrics
       targetPort: http-metrics
-  selector:
-    app: {{ template "cortex.name" . }}-ruler
-    release: {{ .Release.Name }}
+  selector: {{ include "cortex-ruler.matchLabels" . | nindent 4 }}
