--- a/templates/secret.yaml
+++ b/templates/secret.yaml
@@ -4,11 +4,7 @@ kind: Secret
 metadata:
   name: {{ template "cortex.fullname" . }}
   namespace: {{ .Release.Namespace }}
-  labels:
-    app: {{ template "cortex.name" . }}
-    chart: {{ template "cortex.chart" . }}
-    release: {{ .Release.Name }}
-    heritage: {{ .Release.Service }}
+  labels: {{ include "cortex.labels" . | nindent 4 }}
 data:
   cortex.yaml: {{ tpl (toYaml .Values.config) . | b64enc}}
 {{- end }}
