--- a/templates/serviceaccount.yaml
+++ b/templates/serviceaccount.yaml
@@ -2,11 +2,7 @@
 apiVersion: v1
 kind: ServiceAccount
 metadata:
-  labels:
-    app: {{ template "cortex.name" . }}
-    chart: {{ template "cortex.chart" . }}
-    heritage: {{ .Release.Service }}
-    release: {{ .Release.Name }}
+  labels: {{ include "cortex.labels" . | nindent 4 }}
   annotations:
     {{- toYaml .Values.serviceAccount.annotations | nindent 4 }}
   name: {{ template "cortex.serviceAccountName" . }}
