--- a/templates/store-gateway/store-gateway-servicemonitor.yaml
+++ b/templates/store-gateway/store-gateway-servicemonitor.yaml
@@ -1,13 +1,9 @@
-{{- if .Values.store_gateway.serviceMonitor.enabled }}
+{{- if and (eq .Values.config.storage.engine "blocks") .Values.store_gateway.serviceMonitor.enabled }}
 apiVersion: monitoring.coreos.com/v1
 kind: ServiceMonitor
 metadata:
-  name: {{ template "cortex.fullname" . }}-store-gateway
-  labels:
-    app: {{ template "cortex.name" . }}
-    chart: {{ template "cortex.chart" . }}
-    heritage: {{ .Release.Service }}
-    release: {{ .Release.Name }}
+  name: {{ template "cortex-store-gateway.fullname" . }}
+  labels: {{ include "cortex-store-gateway.labels" . | nindent 4 }}
     {{- if .Values.store_gateway.serviceMonitor.additionalLabels }}
 {{ toYaml .Values.store_gateway.serviceMonitor.additionalLabels | indent 4 }}
     {{- end }}
@@ -17,9 +13,7 @@ metadata:
   {{- end }}
 spec:
   selector:
-    matchLabels:
-      app: {{ template "cortex.name" . }}-store-gateway
-      release: {{ .Release.Name | quote }}
+    matchLabels: {{ include "cortex-store-gateway.matchLabels" . | nindent 6 }}
   namespaceSelector:
     matchNames:
       - {{ .Release.Namespace | quote }}
