--- a/templates/store-gateway/store-gateway-svc.yaml
+++ b/templates/store-gateway/store-gateway-svc.yaml
@@ -2,16 +2,11 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: {{ template "cortex.fullname" . }}-store-gateway-headless
-  namespace: {{ .Release.Namespace }}
-  labels:
-    app: {{ template "cortex.name" . }}-store-gateway
-    chart: {{ template "cortex.chart" . }}
-    release: {{ .Release.Name }}
-    heritage: {{ .Release.Service }}
-    {{- with .Values.store_gateway.labels }}
-    {{- toYaml . | nindent 4 }}
-    {{- end }}
+  name: {{ template "cortex-store-gateway.headlessname" . }}
+  labels: {{ include "cortex-store-gateway.labels" . | nindent 4 }}
+{{- with .Values.store_gateway.labels }}
+{{- toYaml . | indent 4 }}
+{{- end }}
   annotations:
     {{- toYaml .Values.store_gateway.annotations | nindent 4 }}
 spec:
@@ -26,7 +21,5 @@ spec:
       protocol: TCP
       name: grpclb
       targetPort: grpc      
-  selector:
-    app: {{ template "cortex.name" . }}-store-gateway
-    release: {{ .Release.Name }}
+  selector: {{ include "cortex-store-gateway.matchLabels" . | nindent 4 }}
 {{- end -}}
