--- a/templates/table-manager/table-manager-dep.yaml
+++ b/templates/table-manager/table-manager-dep.yaml
@@ -2,33 +2,22 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: {{ template "cortex.fullname" . }}-table-manager
-  namespace: {{ .Release.Namespace }}
-  labels:
-    app: {{ template "cortex.name" . }}-table-manager
-    chart: {{ template "cortex.chart" . }}
-    release: {{ .Release.Name }}
-    heritage: {{ .Release.Service }}
+  name: {{ template "cortex-table-manager.fullname" . }}
+  labels: {{ include "cortex-table-manager.labels" . | nindent 4 }}
   annotations:
     {{- toYaml .Values.table_manager.annotations | nindent 4 }}
 spec:
   replicas: {{ .Values.table_manager.replicas }}
   selector:
-    matchLabels:
-      app: {{ template "cortex.name" . }}-table-manager
-      release: {{ .Release.Name }}
+    matchLabels: {{ include "cortex-table-manager.matchLabels" . | nindent 6 }}
   strategy:
     {{- toYaml .Values.table_manager.strategy | nindent 4 }}
   template:
     metadata:
-      labels:
-        app: {{ template "cortex.name" . }}-table-manager
-        name: {{ template "cortex.name" . }}-table-manager
-        target: table-manager
-        release: {{ .Release.Name }}
-        {{- with .Values.table_manager.podLabels }}
-        {{- toYaml . | nindent 8 }}
-        {{- end }}
+      labels: {{ include "cortex-table-manager.labels" . | nindent 8 }}
+{{- with .Values.table_manager.podLabels }}
+{{- toYaml . | indent 8 }}
+{{- end }}
       annotations:
 {{- if .Values.useExternalConfig }}
         checksum/config: {{ .Values.externalConfigVersion }}
